# gd-sqlite3

./: .gitignore  pyproject.toml
src/gd_sqlite3/: __init__.py
src/tests/: test_db.py
