[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gd_sqlite3"
version = "0.0.1"
authors = [
    { name="Gibran Dar", email="gibrandar@gmail.com" }
]
description = "A basic sqlite3 wrapper for python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/GibranDar/gd-sqlite3"
"Bug Tracker" = "https://github.com/GibranDar/gd-sqlite3/issues"

